# ia-solution

./: .env.example  .gitignore  .htaccess  Dockerfile  README.md  add_payment_method.py  app_dynamo.py  auth.py  aws_textract.py  business.py  business_dynamo.py  check_dynamo_connection.py  currency_converter.py  dashboard.py  dashboard_models.py  docker-compose.yml  docker-entrypoint.sh  document_parser.py  documentation.md  dynamo_auth.py  dynamo_models.py  dynamo_s3_service.py  email_service.py  export.py  export_powerpoint.py  finance.py  finance_blueprint.py  fix_escaped_quotes.py  forms.py  generate_powerpoint.py  get_users.py  init_dashboard_data.py  init_dynamodb.py  init_marketplace_data.py  init_modules_data.py  init_rdc_plans.py  init_subscription_plans.py  init_training_data.py  invoicing.py  language.py  (+37 more)
nginx/: nginx.conf
nginx/conf.d/: default.conf
services/api_gateway/: __init__.py  gateway.py
services/messaging_service/: __init__.py  rabbitmq_client.py  service.py
services/openai_service/: __init__.py  client.py  service.py
static/: admin.js  dark-theme.css  ocr.js  redirect.html  script.js  script.js.bak  simple-theme.js  style.css  theme.js
templates/: admin.html  business_consultation.html  business_consultation_basic.html  business_report.html  business_test.html  business_transition.html  chat.html  confirm.html  dashboard_simple.html  forgot_password.html  index.html  index.html.backup  layout.html  login.html  ocr.html  ocr_new.html  profile.html  register.html  resend_confirmation.html  reset_password.html
templates/export/: index.html  (+5 more)
(+97 files in other folders)
